# SimplePlot

./: .gitignore  README.md  SimplePlot.spec  main.py  pyproject.toml  test.csv
SimplePlot/: __init__.py  __main__.py  mainwindow.py  mainwindow_ui.py  simpleplot.qrc  simpleplot_rc.py  util.py
SimplePlot/translations/: simpleplot_pl.qm  simpleplot_pl.ts
simple_plot/: __init__.py  __main__.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  numerics.py  simpleplot_rc.py
simple_plot/translations/: simpleplot_pl.qm  simpleplot_pl.ts
