[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "SimplePlot"
authors = [{ name = "Maciej Dems", email = "macdems@gmail.com" }]
description = "Simple linear plotting tool for schools"
readme = "README.md"
requires-python = ">=3"
license = { text = "GPL3" }
keywords = ["education", "plotting", "mathematics", "school"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Education",
]
dependencies = ["PyQt5", "numpy", "matplotlib"]
dynamic = ["version"]

[project.urls]
Homepage = "http://github.com/macdems/SimplePlot"

[project.gui-scripts]
simple-plot = "SimplePlot:main"

[tool.setuptools_scm]
write_to = "SimplePlot/__version__.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
